Git_WGBH_QC/src/objects/Fund__c.object
<CustomObject>
    <description>The fund field is the name of a fund (security) in the market that WGBH received dividends, stock cash payments or is a beneficiary in a will.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fund_Description__c</fullName>
        <label>Fund Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fund_Type_Value__c</fullName>
        <label>Fund Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <externalId>true</externalId>
        <label>Fund</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <label>GL Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fund_type__c</fullName>
        <label>Fund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted, Non-Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>fund_type__c</columns>
        <columns>Fund_Description__c</columns>
        <columns>Fund__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>